syntax = "proto3";

package api.admin.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "sunflower-blog-svc/api/admin/v1;v1";
option java_multiple_files = true;
option java_package = "api.admin.v1";

service User {
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/v1/user/login"
      body: "*"
    };
  }

  rpc Logout (google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/user/logout"
      body: "*"
    };
  }

  rpc UserInfo (google.protobuf.Empty) returns (UserInfoReply) {
    option (google.api.http) = {
      get: "/api/v1/user"
    };
  }

  rpc RootUserInfo (google.protobuf.Empty) returns (UserInfoReply) {
    option (google.api.http) = {
      get: "/api/v1/user/root"
    };
  }
}

message LoginRequest {
  string account = 1 [json_name = "account"];
  string password = 2 [json_name = "password"];
}

message LoginReply {
  string token = 1 [json_name = "token"];
}

message UserInfoReply {
  string username = 1 [json_name = "username"];
  string email = 2 [json_name = "email"];
  string avatar = 3 [json_name = "avatar"];
}